--- a/src/main/webapp/resources/css/jquery.bxslider.css
+++ b/src/main/webapp/resources/css/jquery.bxslider.css
@@ -59,7 +59,7 @@
 	position: absolute;
 	bottom: 100px;
 	width: 100%;
-	height:1000px;/*20170316 KDH 수정*/
+	height:1000px;
 }
 
 /* LOADER */
@@ -133,7 +133,7 @@
 
 .bx-wrapper .bx-controls-direction a {
 	position: absolute;
-	top: 80%;/*20170316 KDH 화살표 위치 수정*/
+	top: 100%;
 	margin-top: -16px;
 	outline: 0;
 	width: 32px;
