--- a/src/main/webapp/resources/css/select.css
+++ b/src/main/webapp/resources/css/select.css
@@ -1,40 +1,115 @@
+body{
+	background-color:#F2F2F2;
+	width: 700px;
+	margin: 0 auto;
+}
+
 #selectTable{
-	height:600px;
+	padding-top:20px;
+	height:540px;
 	width:99%;
 }
+
+#selectTable .lunchSelect{
+	background-color:white;
+	cursor:pointer;
+	text-align:center;
+	float:left;
+	height:180px;
+	border:1px solid black;
+	width:33%;
+}
+
+#selectTable .lunchSelect font{
+	line-height:180px;
+	font-size:20px;
+}
+
+#selectTable .lunchSelect:hover font{
+	line-height:175px;
+	font-size:25px;
+}
+
+#selectTable .lunchSelect:active{
+	background-color:#FF7800;
+	cursor:pointer;
+	text-align:center;
+	float:left;
+	height:180px;
+	border:1px solid black;
+	width:33%;
+}
+
 #selectTable #topLine{
 	position:static;
-	height:200px;
+	height:180px;
 	width:99%;
 }
-#selectTable #topLine div{
-	float:left;
-	height:200px;
-	border:1px solid black;
-	width:33%;
-	cursor:pointer;
-}
+
 #selectTable #middleLine{
 	position:static;
-	height:200px;
+	height:180px;
 	width:99%;
 }
-#selectTable #middleLine div{
-	float:left;
-	height:200px;
-	border:1px solid black;
-	width:33%;
-	cursor:pointer;
-}
+
 #selectTable #bottomLine{
 	postition:static;
-	height:200px;
+	height:180px;
 	width:99%;
 }
-#selectTable #bottomLine div{
-	float:left;
-	border:1px solid black;
-	height:200px;
-	width:33%;
+
+#selectTable .lunchSelect.nMenu{
+	background-image:url("/resources/img/arrow_bg.png");
+	background-repeat:no-repeat;
+	background-color:#FF7800;
+}
+
+#main #retryBtn{
+	margin:52px auto;
+	text-align:center;
 	cursor:pointer;
+	border:1px solid;
+	border-radius:10px 10px 10px 10px;
+	background-color:white;
+	width:30%;
+	height:13%;
+}
+
+#main #retryBtn font{
+	line-height:30px;
+	font-weight:bold;
+}
+
+#main #retryBtn:hover{
+	margin:52px auto;
+	text-align:center;
+	cursor:pointer;
+	border:1px solid;
+	border-radius:10px 10px 10px 10px;
+	background-color:white;
+	width:33%;
+	height:16%;
+}
+
+#main #retryBtn:hover font{
+	line-height:35px;
+	font-weight:bold;
+	font-size:18px;
+}
+
+#main #retryBtn:active{
+	margin:52px auto;
+	text-align:center;
+	cursor:pointer;
+	border:1px solid;
+	border-radius:10px 10px 10px 10px;
+	background-color:#FF7800;
+	width:33%;
+	height:16%;
+}
+
+#main #retryBtn:active font{
+	line-height:35px;
+	font-weight:bold;
+	font-size:18px;
 }
